static/index.css
@keyframes modal_animation {
    from{
        transform: translate(0, -20px);
        filter: blur(5px) opacity(.5);
    }
    to{
    }
}

*{
    box-sizing: border-box;
    padding: 0;
    margin: 0;
}

body{
    background: url("../static/images/register-back-image.jpg");
    background-position: center;
    background-repeat: no-repeat;
    background-size: cover;
    backdrop-filter: blur(10px);
    width: 100%;
    height: 100vh;
    display: flex;
    flex-direction: column;
    align-items: center;
}

header{
    background-color: rgba(255, 255, 255, 0.1);
    backdrop-filter: blur(5px);

    width: 90%;
    max-width: 900px;
    height: 4rem;

    position: fixed;
    top: 0;
    left: 50%;
    transform: translateX(-50%);

    border-radius: 0 0 15px 15px;
    border-bottom: 1px solid rgba(255, 255, 255, 0.459);

    display: flex;
    align-items: center;
    justify-content: space-between;
}

#display-username{
    color: white;
    margin: 0 2rem;
    font-size: large;
}

#logout{
    background-color: rgba(255, 255, 255, 0.1);
    border: 1px solid rgba(255, 255, 255, 0.3);
    padding: .5rem;
    border-radius: 5px;
    color: white;
    margin: 0 2rem;
    font-size: large;
    transition: .2s ease;
    cursor: pointer;
}

#logout:hover{
    background-color: rgba(255, 0, 0, 0.5);
}

.search-box{
    width: 90%;
    max-width: 800px;
    height: 3rem;

    display: flex;
    align-items: center;
    justify-content: space-between;
    gap: .8rem;

    margin: 10rem 0 1rem 0;
}

#search-room-input{
    width: 90%;
    height: 100%;
    padding: 0 1rem;

    background-color: rgb(255, 255, 255, .1);
    color: white;

    font-size: large;

    border: 1px solid rgba(255, 255, 255, 0.2);
    border-radius: 7px;
    outline: none;

}

#create-room-btn{
    background-color: rgb(255, 255, 255, .1);
    color: white;

    padding: .5rem;

    border: 1px solid rgba(255, 255, 255, 0.2);
    border-radius: 7px;
    transition: .2s ease;
    cursor: pointer;
}

#create-room-btn:hover{
    background-color: rgb(255, 255, 255, .22);
}


#rooms-container{
    width: 90%;
    max-width: 800px;
    margin:0;
    display: flex;
    flex-direction: column; 
    gap: .8rem;
    height: 60vh;
    padding-top: 5px;
    overflow-y: scroll;
    padding-right: .3rem;
}

#rooms-container::-webkit-scrollbar {
    width: 5px;
}
#rooms-container::-webkit-scrollbar-track {
    background: transparent; 
}
#rooms-container::-webkit-scrollbar-thumb {
    background: rgba(255, 255, 255, 0.2);
    border: 1px solid rgba(255, 255, 255, 0.08);
    border-radius: 1rem;
}
#rooms-container::-webkit-scrollbar-thumb:hover {
    background: rgba(255, 255, 255, 0.5);
}

.room{
    display:flex;
    justify-content:space-between;
    align-items:center;

    padding:1rem 1.3rem;

    background:rgba(255,255,255,.08);
    backdrop-filter:blur(10px);

    border:1px solid rgba(255,255,255,.15);
    border-radius:12px;

    color:white;

    cursor:pointer;
    transition:.2s;
}

.room:hover{
    transform:translateY(-2px);
    background:rgba(255,255,255,.14);
}

#modal-overlay-notif{
    display: none;
    position: fixed;
    top: 0;
    left: 0;
    width: 100%;
    height: 100%;
    background: rgba(0, 0, 0, 0.5);
    backdrop-filter: blur(5px);
}
#modal-overlay-notif.show{
    display: block;
}

div.modal-notif-box{
    background-image: linear-gradient(to bottom right, rgba(0, 128, 128, 0.2), rgba(0, 128, 128, 0.4));
    border: 1px solid rgba(255, 255, 255, 0.2);
    border-radius: .7rem;
    color: white;
    width: 30%;
    max-width: 400px;
    min-width: 200px;
    height: 10rem;
    margin: 100px auto;
    padding: 1rem;
    animation: modal_animation .5s ease;
    display: flex;
    align-items: top;
    justify-content: space-between;
}

div.modal-notif-box button{
    background-color: rgba(255, 255, 255, 0.356);
    width: 30px;
    height: 30px;
    border: none;
    outline: none;
    border-radius: 5px;
    color: white;
}

div.modal-notif-box span{
    width: 85%;
}

